Payoon Login Page Setup

--- a/index.html
+++ b/index.html
@@ -14,50 +14,47 @@
     <!-- tailwind cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body class="bg-slate-800">
-    <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
-      <header>
-        <nav class="flex justify-center items-center mt-20">
-          <div class="flex justify-center items-center w-9/12 mb-10">
-            <img class="w-48 absolute" src="./assets/bg.png" alt="" />
-            <img class="w-16" src="./assets/Group.png" alt="" />
+
+  <body class="">
+    <section
+      class="flex flex-col items-center justify-center h-screen space-y-2"
+    >
+      <div
+        class="bg-[url('./assets/bg.png')] bg-cover w-40 flex flex-col items-center"
+      >
+        <img src="./assets/Group.png" alt="" class="w-20 mt-5" />
+      </div>
+      <div class="form">
+        <form class="w-full space-y-5">
+          <label for="Mobile Number" class="font-semibold">Mobile Number</label>
+          <br />
+          <input
+            type="text"
+            placeholder="Enter Your Mobile Number"
+            class="rounded-xl border-none bg-gray-100 h-8 w-60 px-2 mt-2"
+            value="01719466242"
+            id="mobile-number"
+          />
+          <br />
+          <label for="Mobile Number" class="font-semibold">4 Digit Pin</label>
+          <br />
+          <input
+            type="text"
+            placeholder="Enter 4 Digit Pin"
+            class="rounded-xl border-none bg-gray-100 h-8 w-60 px-2 mt-2"
+            value="1234"
+            id="pin-number"
+          />
+          <br />
+          <div class="text-center">
+            <button
+              id="login-btn"
+              class="btn btn-primary bg-blue-600 border-none mt-2 w-60 px-2"
+            >
+              Login
+            </button>
           </div>
-        </nav>
-      </header>
-      <!-- Login Section -->
-      <div class="hero">
-        <div class="hero-content flex-col lg:flex-row-reverse w-full">
-          <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
-            <form class="card-body">
-              <fieldset class="fieldset">
-                <label class="label font-bold text-black">Mobile Number</label>
-                <input
-                  required
-                  type="number"
-                  id="mobile-number"
-                  class="input"
-                  maxlength="11"
-                  value="01719466242"
-                  placeholder="Enter Your Mobile Number"
-                />
-                <label class="label font-bold text-black">4 Digit Pin</label>
-                <input
-                  required
-                  type="text"
-                  id="pin"
-                  class="input"
-                  placeholder="Enter 4 Digit Pin"
-                />
-                <button
-                  id="login-btn"
-                  class="btn btn-neutral mt-4 bg-blue-500 border-none"
-                >
-                  Login
-                </button>
-              </fieldset>
-            </form>
-          </div>
-        </div>
+        </form>
       </div>
     </section>
     <script src="./app.js"></script>
