Functional Amount and Pin Number Validation

--- a/home.html
+++ b/home.html
@@ -100,6 +100,7 @@
         </fieldset>
         <legend class="my-1 font-semibold">Bank Account Number</legend>
         <input
+          id="mobile-number"
           type="text"
           placeholder="Bank Account Number"
           class="input input-primary w-full border-none rounded-xl bg-gray-100"
@@ -110,10 +111,10 @@
           type="text"
           placeholder="Amount to Add"
           class="input input-primary w-full border-none rounded-xl bg-gray-100"
-          value="1000"
         />
         <legend class="my-1 font-semibold">Pin Number</legend>
         <input
+          id="pin-number"
           type="text"
           placeholder="Enter 4 digit pin"
           class="input input-primary w-full border-none rounded-xl bg-gray-100"
