--- a/index.html
+++ b/index.html
@@ -58,5 +58,7 @@
       </div>
     </section>
     <script src="./app.js"></script>
+    <script src="./home.js"></script>
+    <script src="./cashout.js"></script>
   </body>
 </html>
