--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             type="text"
             placeholder="Enter Your Mobile Number"
             class="rounded-xl border-none bg-gray-100 h-8 w-60 px-2 mt-2"
-            value="01719466242"
-            id="mobile-number"
+            value="123456789"
+            id="login-mobile-number"
           />
           <br />
           <label for="Mobile Number" class="font-semibold">4 Digit Pin</label>
@@ -43,7 +43,7 @@
             placeholder="Enter 4 Digit Pin"
             class="rounded-xl border-none bg-gray-100 h-8 w-60 px-2 mt-2"
             value="1234"
-            id="pin-number"
+            id="login-pin-number"
           />
           <br />
           <div class="text-center">
@@ -57,8 +57,6 @@
         </form>
       </div>
     </section>
-    <script src="./app.js"></script>
-    <script src="./home.js"></script>
-    <script src="./cashout.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
