--- a/home.html
+++ b/home.html
@@ -282,7 +282,11 @@
       id="transactions-form"
       class="transaction-section mt-3 md:mt-5 hidden"
     >
-      <h3 class="font-bold">Transactions</h3>
+      <div class="flex justify-between items-center">
+        <h3 class="font-bold">Transaction History</h3>
+        <p>View All</p>
+      </div>
+      <div id="transaction-container"></div>
     </section>
 
     <script src="./home.js"></script>
