Pay Bill Section

--- a/home.html
+++ b/home.html
@@ -247,7 +247,7 @@
       <form class="form">
         <legend class="my-1 font-semibold">Biller Account Number</legend>
         <input
-          id="cash-out-agent"
+          id="pay-bill-account"
           value="01719466242"
           type="text"
           placeholder="Enter 11 Digit Number"
@@ -255,14 +255,14 @@
         />
         <legend class="my-1 font-semibold">Amount to Pay</legend>
         <input
-          id="cash-out-amount"
+          id="pay-bill-amount"
           type="text"
           placeholder="Amount to Cash Out"
           class="input input-primary w-full border-none rounded-xl bg-gray-100"
         />
         <legend class="my-1 font-semibold">Pin Number</legend>
         <input
-          id="cash-out-pin"
+          id="pay-bill-pin"
           value="1234"
           type="text"
           placeholder="Enter 4 digit pin"
@@ -270,10 +270,10 @@
         />
         <div class="text-center mt-2">
           <button
-            id="cash-out-submit"
+            id="pay-bill-submit"
             class="btn btn-primary bg-blue-600 border-none mt-2 w-full px-2"
           >
-            Withdraw Money
+            Pay Bill
           </button>
         </div>
       </form>
